Add 2nd level auth for imagekit.io
