# config/routes.rb
@@ -7,6 +7,7 @@ Rails.application.routes.draw do
              }
   resources :vehicles, only: [:index, :show, :create, :update]
   resources :reservations, only: [:index, :create]
+  get 'imagekit/auth_params'
   get '/', to: 'swag#api'
   root to: 'swag#api'
 end
